syntax = "proto3";

// Указание namespace для protobuf
package dev.madela.apteka.medication;

// Указывает, что каждый message будет сгенерирован как отдельный Java-файл
option java_multiple_files = true;

// Путь пакета для генерации Java-классов
option java_package = "dev.madela.apteka.proto.medication";

// Имя внешнего класса-контейнера (если используется)
option java_outer_classname = "MedicationProto";

// ---- DOMAIN MODELS ----

/**
 * Активное вещество медикамента.
 */
message ActiveSubstance {
  string name = 1;          // Название вещества
  double concentration = 2; // Концентрация в единицах измерения
}

/**
 * Представление медикамента.
 */
message Medication {
  string id = 1;                          // Уникальный идентификатор
  string name = 2;                        // Название препарата
  double price = 3;                       // Цена
  string category = 4;                    // Категория (например, "антибиотики")
  repeated ActiveSubstance active_substances = 5; // Список активных веществ
  string pharmacy_id = 6;                // Аптека, где доступен препарат
}

// ---- REQUEST / RESPONSE МОДЕЛИ ----

/**
 * Диапазон цен для фильтрации медикаментов.
 */
message PriceRange {
  double min = 1; // Минимальная цена
  double max = 2; // Максимальная цена
}

/**
 * Стандартная пагинация.
 */
message Pagination {
  int32 page = 1; // Номер страницы (0-based)
  int32 size = 2; // Кол-во элементов на страницу
}

/**
 * Запрос для получения медикаментов с фильтрами.
 */
message MedicationRequest {
  string category = 1;         // Фильтрация по категории
  PriceRange price_range = 2;  // Фильтрация по диапазону цен
  Pagination pagination = 3;   // Пагинация
}

/**
 * Ответ с множеством медикаментов.
 */
message MedicationsResponse {
  repeated Medication medications = 1; // Список медикаментов
  int32 total_count = 2;               // Общее число медикаментов
}

/**
 * Запрос на получение медикамента по ID.
 */
message MedicationIdRequest {
  string id = 1;
}

/**
 * Ответ с одним медикаментом.
 */
message MedicationResponse {
  Medication medication = 1;
}

/**
 * Запрос на получение нескольких медикаментов по ID.
 */
message MedicationIdsRequest {
  repeated string ids = 1;
}

/**
 * Запрос на удаление медикамента по ID.
 */
message DeleteMedicationRequest {
  string id = 1;
}

/**
 * Ответ после удаления медикамента.
 */
message DeleteMedicationResponse {
  string id = 1;   // ID удалённого медикамента
  string name = 2; // Название удалённого медикамента
}

/**
 * Запрос на удаление просроченных медикаментов.
 */
message DeleteExpiredMedicationsRequest {
  string expiry_date = 1; // Препараты с истёкшим сроком до этой даты
}

/**
 * Ответ после удаления просроченных медикаментов.
 */
message DeleteExpiredMedicationsResponse {
  int32 count = 1;                 // Количество удалённых
  repeated string deleted_ids = 2; // Список ID удалённых препаратов
}

/**
 * Запрос на обновление цены медикамента.
 */
message UpdateMedicationPriceRequest {
  string id = 1;
  double new_price = 2;
  double old_price = 3; // Для валидации или логирования
}

/**
 * Ответ после обновления цены.
 */
message UpdateMedicationPriceResponse {
  string id = 1;
  string name = 2;
  double old_price = 3;
  double new_price = 4;
  string updated_at = 5; // Дата обновления (в строковом формате)
}

/**
 * Запрос на получение медикаментов конкретной аптеки.
 */
message PharmacyMedicationsRequest {
  string pharmacy_id = 1;
}

/**
 * Ответ с медикаментами аптеки.
 */
message PharmacyMedicationsResponse {
  repeated Medication medications = 1;
}

/**
 * Запрос на получение статистики по аптеке.
 */
message PharmacyStatisticsRequest {
  string pharmacy_id = 1;
}

/**
 * Категория и количество медикаментов в этой категории.
 */
message CategoryStock {
  string category = 1;
  int32 count = 2;
}

/**
 * Ответ со статистикой по аптеке.
 */
message PharmacyStatisticsResponse {
  int32 total_medications = 1;                 // Общее количество медикаментов
  double average_price = 2;                    // Средняя цена
  repeated CategoryStock stock_by_category = 3; // Список категорий с их остатками
}

// ---- SERVICE DEFINITION ----

/**
 * gRPC-сервис MedicationService.
 * Предоставляет CRUD, агрегации и аналитику для медикаментов.
 */
service MedicationService {
  rpc GetMedications (MedicationRequest) returns (MedicationsResponse);
  rpc GetMedicationById (MedicationIdRequest) returns (MedicationResponse);
  rpc GetMedicationsByIds (MedicationIdsRequest) returns (MedicationsResponse);
  rpc DeleteMedication (DeleteMedicationRequest) returns (DeleteMedicationResponse);
  rpc DeleteExpiredMedications(DeleteExpiredMedicationsRequest) returns (DeleteExpiredMedicationsResponse);
  rpc UpdateMedicationPrice (UpdateMedicationPriceRequest) returns (UpdateMedicationPriceResponse);
  rpc GetMedicationsByPharmacy (PharmacyMedicationsRequest) returns (PharmacyMedicationsResponse);
  rpc GetPharmacyStatistics (PharmacyStatisticsRequest) returns (PharmacyStatisticsResponse);
}
